--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,10 +1,6 @@
-.card {
-  max-width: 413px;
-}
-
 .card__image {
   height: 413px;
-  width: 413px;
+  width: 100%;
   object-fit: cover;
   display: block;
   border-radius: 2%;
@@ -17,7 +13,15 @@
 }
 
 .card__title {
-  margin: 0;
+  margin: 12px 0 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: #212121;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 353px;
 }
 
 .card__like-button {
@@ -26,4 +30,15 @@
   width: 23px;
   border: none;
   background-color: transparent;
+  color: #212121;
+}
+
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
+
+  .card__title {
+    max-width: 253px;
+  }
 }
