--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,7 @@
 .cards {
   padding-top: 20px;
+  padding-bottom: 36px;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 .cards__list {
@@ -11,4 +13,11 @@
   grid-column-gap: 20px;
   grid-row-gap: 40px;
   justify-content: center;
+}
+
+@media screen and (max-width: 627px) {
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+    grid-row-gap: 20px;
+  }
 }
