--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,7 +3,7 @@
   width: 100%;
   object-fit: cover;
   display: block;
-  border-radius: 2%;
+  border-radius: 8px;
 }
 
 .card__content {
@@ -40,5 +40,7 @@
 
   .card__title {
     max-width: 253px;
+    font-size: 20px;
+    line-height: 1;
   }
 }
