--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -6,7 +6,7 @@
 
 .profile__avatar {
   margin-right: 20px;
-  border-radius: 2%;
+  border-radius: 8px;
   height: 190px;
   width: 190px;
 }
@@ -27,6 +27,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: #212121;
 }
 
 .profile__description {
@@ -55,6 +56,9 @@
   background-color: #fcf5e5;
   color: #212121;
   opacity: 70%;
+  font-size: 16px;
+  line-height: 1;
+  font-weight: 500;
 }
 
 .profile__add-button {
@@ -71,6 +75,9 @@
   border-radius: 8px;
   background-color: #212121;
   color: #fcf5e5;
+  font-size: 16;
+  line-height: 1;
+  font-weight: 500;
 }
 
 .profile__add-button-image {
