--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,5 +1,7 @@
 .content {
   padding: 0 20px;
+  min-height: calc(100vh - 180px);
+  /* min-height for a sticky footer */
 }
 
 @media screen and (max-width: 627px) {
