--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,12 +10,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 12px;
 }
 
 .card__title {
-  margin: 12px 0 0;
+  margin: 0;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.2;
   color: #212121;
   text-overflow: ellipsis;
@@ -31,6 +32,12 @@
   border: none;
   background-color: transparent;
   color: #212121;
+  opacity: 40%;
+}
+
+.card__like-button:hover {
+  opacity: 100%;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
