--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -59,6 +59,12 @@
   font-size: 16px;
   line-height: 1;
   font-weight: 500;
+  opacity: 70%;
+}
+
+.profile__edit-button:hover {
+  opacity: 100%;
+  cursor: pointer;
 }
 
 .profile__add-button {
@@ -78,6 +84,11 @@
   font-size: 16;
   line-height: 1;
   font-weight: 500;
+}
+
+.profile__add-button:hover {
+  opacity: 80%;
+  cursor: pointer;
 }
 
 .profile__add-button-image {
