--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,107 +1,110 @@
 .modal {
-position: fixed;
-top: 0;
-left: 0;
-bottom: 0;
-right: 0;
-background-color: rgba(0, 0, 0, 0.5);
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-padding: 0 16px;
-visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 16px;
+  visibility: hidden;
 }
 
 .modal__opened {
-    visibility: visible;
+  visibility: visible;
 }
 
 .modal__container {
-background-color: #fff;
-padding: 32px 50px;
-max-width: 730px;
-width: 100%;
-position: relative;
-box-sizing: border-box;
+  background-color: #fff;
+  padding: 32px 50px;
+  max-width: 730px;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .modal__close-btn {
-position: absolute;
-top: 32px;
-right: 50px;
-width: 40px;
-height: 40px;
-background-image: url(../images/closebutton.svg);
-background-color: transparent;
+  position: absolute;
+  top: 32px;
+  right: 50px;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/closebutton.svg);
+  background-color: transparent;
   color: #212121;
   opacity: 40%;
   border: none;
+  cursor: pointer;
+}
+
+.modal__close-btn:hover {
+  opacity: 100%;
 }
 
 .modal__title {
-margin: 0 0 32px;
-font-size: 32px;
-line-height: 1;
+  margin: 0 0 32px;
+  font-size: 32px;
+  line-height: 1;
 }
 
 .modal__form {
-
 }
 
 .modal__label {
-display: flex;
-flex-direction: column;
-gap: 8px;
-margin-bottom: 32px;
-opacity: 70%;
-line-height: 17.6px;
-color: #212121;
-font-size: 16px;
-
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 32px;
+  opacity: 70%;
+  line-height: 17.6px;
+  color: #212121;
+  font-size: 16px;
 }
 
 .modal__input {
-padding: 16px 12px;
-border-radius: 8px;
-font-size: 20px;
-line-height: 20px;
-opacity: 100%;
-color: rgba(33, 33, 33, 1);
+  padding: 16px 12px;
+  border-radius: 8px;
+  font-size: 20px;
+  line-height: 20px;
+  opacity: 100%;
+  color: rgba(33, 33, 33, 1);
 }
 
 .modal__submit-btn {
-    width: 156px;
-    padding: 18px 0;
-    background-color: #212121;
-    color: #FCF5E5;
-    border-radius: 8px;
+  width: 156px;
+  padding: 18px 0;
+  background-color: #212121;
+  color: #fcf5e5;
+  border-radius: 8px;
 }
 
 @media screen and (max-width: 627px) {
-    .modal {
-     padding: 0 10px;
-    }
-    
-    .modal__container {
-        padding: 12px;
-    }
+  .modal {
+    padding: 0 10px;
+  }
 
-    .modal__title {
-        font-size: 20px;
-        margin: 10px 0 34px;
-    }
+  .modal__container {
+    padding: 12px;
+  }
 
-    .modal__close-btn {
-        top: 12px;
-        right: 12px;
-    }
+  .modal__title {
+    font-size: 20px;
+    margin: 10px 0 34px;
+  }
 
-    .modal__label {
-        margin-bottom: 24px;
-    }
+  .modal__close-btn {
+    top: 12px;
+    right: 12px;
+  }
 
-    .modal__submit-btn {
-        width: 100%;
-    }
+  .modal__label {
+    margin-bottom: 24px;
+  }
+
+  .modal__submit-btn {
+    width: 100%;
+  }
 }
