--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -79,6 +79,7 @@
   background-color: #212121;
   color: #fcf5e5;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
