--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,7 +13,7 @@
   visibility: hidden;
 }
 
-.modal__opened {
+.modal_opened {
   visibility: visible;
 }
 
@@ -24,6 +24,7 @@
   width: 100%;
   position: relative;
   box-sizing: border-box;
+  border-radius: 8px;
 }
 
 .modal__close-btn {
