--- a/blocks/card.css
+++ b/blocks/card.css
@@ -45,10 +45,10 @@
 }
 
 .card__like-button_liked {
-background-image: url(../images/like-icon-liked.svg);
-opacity: 1;
-width: 22px;
-height: 20px;
+  background-image: url(../images/like-icon-liked.svg);
+  opacity: 1;
+  width: 22px;
+  height: 20px;
 }
 
 .card__like-button_liked:hover {
@@ -56,15 +56,15 @@ height: 20px;
 }
 
 .card__delete-button {
-background-image: url(../images/delete-button.svg);
-height: 32px;
-width: 32px;
-border: none;
-background-color: transparent;
-position: absolute;
-left: 371px;
-top: 10px;
-cursor: pointer;
+  background-image: url(../images/delete-button.svg);
+  height: 32px;
+  width: 32px;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  cursor: pointer;
 }
 
 .card__delete-button:hover {
