--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,10 +11,37 @@
   justify-content: center;
   padding: 0 16px;
   visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0s linear 0.3s;
 }
 
 .modal_opened {
   visibility: visible;
+  opacity: 1;
+  transition: opacity 0.3s ease, visibility 0s linear;
+}
+
+.modal__content {
+  max-width: 730px;
+  box-sizing: border-box;
+
+  background-color: #fff;
+  border-radius: 10px;
+  position: relative;
+  padding: 36px 50px 32px;
+}
+
+.modal__content_type_preview {
+  padding: 0;
+  background-color: transparent;
+}
+
+.modal__image {
+  width: 100%;
+  object-fit: contain;
+  max-width: 80vw;
+  max-height: 80vh;
+  border-radius: 8px;
 }
 
 .modal__container {
@@ -45,13 +72,22 @@
   opacity: 100%;
 }
 
+.modal__close-btn_type_preview {
+  background-image: url(../images/close-icon-preview.svg);
+  position: absolute;
+  top: 0px;
+  right: -52.5px;
+  opacity: 1;
+}
+
+.modal__close-btn_type_preview:hover {
+  background-image: url(../images/close-icon-preview-hover.svg);
+}
+
 .modal__title {
   margin: 0 0 32px;
   font-size: 32px;
   line-height: 1;
-}
-
-.modal__form {
 }
 
 .modal__label {
@@ -83,6 +119,22 @@
   cursor: pointer;
 }
 
+.modal__submit-btn:hover {
+  opacity: 80%;
+}
+
+.modal__caption {
+  color: #ffffff;
+  background-color: #212121;
+  max-width: min(214px, 90%);
+  font-size: 20px;
+  line-height: 120%;
+  text-align: center;
+  padding: 4px 8px;
+  border-radius: 8px;
+  margin-top: 8px;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
@@ -108,5 +160,19 @@
 
   .modal__submit-btn {
     width: 100%;
+  }
+
+  .modal__image {
+    max-width: 90vw;
+    max-height: 70vh;
+  }
+
+  .modal__close-btn_type_preview {
+    top: -40px;
+  }
+
+  .modal__caption {
+    max-width: min(175px, 90%);
+    font-size: 16px;
   }
 }
