--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -110,6 +110,10 @@
   color: rgba(33, 33, 33, 1);
 }
 
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
 .modal__error {
   display: block;
   color: #ff0000;
@@ -123,6 +127,10 @@
   color: #fcf5e5;
   border-radius: 8px;
   cursor: pointer;
+}
+
+.modal__submit-btn_type_disabled {
+  opacity: 50%;
 }
 
 .modal__submit-btn:hover {
