--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -88,6 +88,8 @@
   margin: 0 0 32px;
   font-size: 32px;
   line-height: 1;
+  color: #212121;
+  font-weight: 500;
 }
 
 .modal__label {
@@ -95,9 +97,8 @@
   flex-direction: column;
   gap: 8px;
   margin-bottom: 32px;
-  opacity: 70%;
   line-height: 17.6px;
-  color: #212121;
+  color: rgba(33, 33, 33, 0.7);
   font-size: 16px;
 }
 
@@ -106,8 +107,12 @@
   border-radius: 8px;
   font-size: 20px;
   line-height: 20px;
-  opacity: 100%;
   color: rgba(33, 33, 33, 1);
+  border: 1px solid rgba(33, 33, 33, 0.4);
+}
+
+.modal__input:hover {
+  border-color: rgba(33, 33, 33, 1);
 }
 
 .modal__input_type_error {
@@ -126,6 +131,7 @@
   background-color: #212121;
   color: #fcf5e5;
   border-radius: 8px;
+  border: none;
   cursor: pointer;
 }
 
