--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -4,8 +4,46 @@
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
-.profile__avatar {
+.profile__avatar-container {
+  position: relative;
   margin-right: 20px;
+}
+
+.profile__avatar-btn {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 98%;
+  border-radius: 8px;
+  opacity: 0;
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 8px;
+  padding-bottom: 12px;
+
+  transition-property: opacity;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in;
+
+  transition: opacity 0.5s ease-out, visibility 0s 0.5s;
+
+  visibility: hidden;
+}
+
+.profile__avatar-container:hover .profile__avatar-btn {
+  visibility: visible;
+  cursor: pointer;
+  opacity: 50%;
+  transition-delay: 0s;
+}
+
+.profile__avatar-btn::after {
+  content: "Edit Avatar";
+}
+
+.profile__avatar {
   border-radius: 8px;
   height: 190px;
   width: 190px;
@@ -103,6 +141,33 @@
     align-items: center;
     text-align: center;
     padding-top: 20px;
+  }
+
+  .profile__avatar-container {
+    margin-right: 0px;
+  }
+
+  .profile__avatar-btn {
+    visibility: visible;
+    justify-content: right;
+    opacity: 60%;
+    height: 25%;
+    width: 30%;
+    top: 52px;
+    left: 52px;
+    gap: 0px;
+    padding-bottom: 0px;
+    justify-content: center;
+    align-items: center;
+    border: 0;
+  }
+
+  .profile__avatar-container:hover .profile__avatar-btn {
+    opacity: 60%;
+  }
+
+  .profile__avatar-btn::after {
+    content: "";
   }
 
   .profile__avatar {
